fix: Add spacing and correct font size to list

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -20,8 +20,11 @@
 }
 
 .about__list {
+  @include font-size(14);
+
   .about__list-item {
     list-style-image: url('../img/icons/ic_arrow.png');
+    margin-bottom: 14px;
   }
 }
 
